# NetRaze

./: .gitignore  AGENTS.md  Cargo.toml  README.md  workspace_getexec.json
crates/getexec-app/: Cargo.toml
crates/getexec-app/src/: lib.rs
crates/getexec-auth/: Cargo.toml
crates/getexec-cli/: Cargo.toml
crates/getexec-cli/src/: main.rs
crates/getexec-config/: Cargo.toml
crates/getexec-config/src/: lib.rs
crates/getexec-core/: Cargo.toml
crates/getexec-core/src/: lib.rs
crates/getexec-dcerpc/: Cargo.toml
crates/getexec-dcerpc/src/: auth.rs  error.rs  lib.rs  ndr.rs  pdu.rs  transport.rs  uuid.rs
crates/getexec-dcerpc/src/interfaces/: srvsvc.rs
crates/getexec-dcerpc/tests/: gen_srvs_fixture.py
crates/getexec-desktop/: Cargo.toml
crates/getexec-desktop/src/: app.rs  main.rs  runtime.rs  state.rs  workflow.rs  workspace.rs
crates/getexec-desktop/src/ui/: config_panel.rs  console.rs  credentials_panel.rs  log_panel.rs  mod.rs  module_library.rs  network_view.rs  share_browser.rs  targets_table.rs  workflow_canvas.rs
crates/getexec-modules/: Cargo.toml
crates/getexec-modules/src/: lib.rs
crates/getexec-modules/src/active_directory/: adcs.rs  add_computer.rs  coerce_plus.rs
crates/getexec-modules/src/credentials/: aws_credentials.rs  dpapi_hash.rs
crates/getexec-modules/src/reconnaissance/: enum_av.rs  gpp_password.rs  mod.rs
crates/getexec-output/: Cargo.toml
crates/getexec-output/src/: lib.rs
crates/getexec-protocols/: Cargo.toml
crates/getexec-protocols/src/: ftp.rs  ldap.rs  lib.rs  mssql.rs  nfs.rs  rdp.rs  ssh.rs  targets.rs  vnc.rs  winrm.rs  wmi.rs
crates/getexec-protocols/src/smb/: browser.rs  connection.rs  crypto.rs  dump.rs  enum_av.rs  exec.rs  fingerprint.rs  hive.rs  info.rs  mod.rs  ntlm.rs  sam.rs  shares.rs  smb2.rs  users.rs
crates/getexec-protocols/src/smb/stubs/: connection.rs  enum_av.rs  exec.rs
crates/getexec-protocols/tests/: samba_integration.rs
crates/getexec-runtime/: Cargo.toml
crates/getexec-runtime/src/: lib.rs
crates/getexec-storage/: Cargo.toml
crates/getexec-storage/src/: lib.rs
crates/getexec-targets/: Cargo.toml
crates/netraze-app/: Cargo.toml
crates/netraze-app/src/: lib.rs
crates/netraze-auth/: Cargo.toml
crates/netraze-auth/src/: lib.rs
crates/netraze-cli/: Cargo.toml
crates/netraze-cli/src/: main.rs
crates/netraze-config/: Cargo.toml
crates/netraze-config/src/: lib.rs
crates/netraze-core/: Cargo.toml
crates/netraze-core/src/: lib.rs
crates/netraze-dcerpc/: Cargo.toml
crates/netraze-dcerpc/src/: auth.rs  channel.rs  lib.rs  ndr.rs  pdu.rs  transport.rs
crates/netraze-dcerpc/src/interfaces/: mod.rs  samr.rs  scmr.rs  srvsvc.rs  winreg.rs
crates/netraze-dcerpc/tests/: gen_samr_fixture.py  gen_srvs_fixture.py
crates/netraze-desktop/: Cargo.toml
crates/netraze-desktop/src/: app.rs  main.rs  runtime.rs  state.rs  workflow.rs
crates/netraze-desktop/src/ui/: config_panel.rs  console.rs  credential_manager.rs  credentials_panel.rs  log_panel.rs  mod.rs  module_library.rs  share_browser.rs  targets_table.rs  workflow_canvas.rs
crates/netraze-modules/: Cargo.toml
crates/netraze-modules/src/: lib.rs
crates/netraze-modules/src/active_directory/: adcs.rs  add_computer.rs  coerce_plus.rs  mod.rs
crates/netraze-modules/src/credentials/: aws_credentials.rs  dpapi_hash.rs  mod.rs
crates/netraze-modules/src/reconnaissance/: enum_av.rs  gpp_password.rs
crates/netraze-output/: Cargo.toml
crates/netraze-protocols/: Cargo.toml
crates/netraze-protocols/examples/: test_target.rs
crates/netraze-protocols/src/: ftp.rs  ldap.rs  lib.rs  mssql.rs  nfs.rs  rdp.rs  ssh.rs  vnc.rs  winrm.rs  wmi.rs
crates/netraze-protocols/src/smb/: crypto.rs  dump.rs  dump_rpc.rs  enum_av.rs  exec.rs  info.rs  info_rpc.rs  mod.rs  ntlm.rs  rpc.rs  shares.rs  shares_rpc.rs  smb2.rs  users.rs  users_rpc.rs
crates/netraze-protocols/src/smb/stubs/: browser.rs  connection.rs  dump.rs  info.rs  shares.rs  users.rs
crates/netraze-protocols/tests/: gen_smb_pipe_fixture.py  info_rpc_samba.rs  rpc_channel_samba.rs  samba_integration.rs  shares_rpc_samba.rs  users_rpc_samba.rs
crates/netraze-runtime/: Cargo.toml
crates/netraze-storage/: Cargo.toml
crates/netraze-targets/: Cargo.toml
crates/netraze-targets/src/: lib.rs
docs/: architecture.md  migration-roadmap.md
tests/samba/: README.md  smb.conf
xtask/: Cargo.toml
xtask/src/: main.rs
