[workspace]
members = [
    "crates/netraze-desktop",
    "crates/netraze-app",
    "crates/netraze-auth",
    "crates/netraze-cli",
    "crates/netraze-config",
    "crates/netraze-core",
    "crates/netraze-dcerpc",
    "crates/netraze-modules",
    "crates/netraze-output",
    "crates/netraze-protocols",
    "crates/netraze-runtime",
    "crates/netraze-storage",
    "crates/netraze-targets",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
version = "0.1.0"
authors = ["GitHub Copilot"]
rust-version = "1.85"

[workspace.dependencies]
aes = "0.8"
anyhow = "1.0"
async-trait = "0.1"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
clap = { version = "4.5", features = ["derive"] }
des = "0.8"
# eframe: bascule sur le backend `wgpu` au lieu du `glow` par défaut.
# Rationale: `glow` (OpenGL via glutin) tombe en `NoGlutinConfigs` sous WSL
# quand la stack EGL n'expose aucun config compatible. `wgpu` passe par
# Vulkan → Lavapipe en software si besoin, ce qui est bien plus fiable dans
# les environnements virtualisés / CI headless.
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wayland",
    "wgpu",
    "x11",
] }
# wgpu en dépendance directe avec les backends natifs activés — eframe
# 0.32 active `egui-wgpu` avec la feature `winit` seule, ce qui ne
# propage PAS `wgpu/default`. Résultat : sans cette ligne, `wgpu` se
# retrouve avec uniquement `wgsl` activé et panique au démarrage avec
# "No wgpu backend feature that is implemented for the target platform
# was enabled". On liste explicitement tous les backends pertinents pour
# notre matrice de plateformes (Windows/Linux/macOS) :
#   - dx12   : Windows natif
#   - vulkan : Linux natif, fallback Windows, WSL via Lavapipe
#   - metal  : macOS/iOS
#   - gles   : fallback OpenGL (Linux headless, vieux drivers)
#   - wgsl   : parser de shaders (requis côté compile par egui-wgpu)
# On exclut volontairement `webgpu` qui nécessite wasm-bindgen.
wgpu = { version = "25", default-features = false, features = [
    "dx12",
    "vulkan",
    "metal",
    "gles",
    "wgsl",
] }
egui = "0.32"
egui-snarl = { version = "0.8", features = ["serde"] }
egui_graphs = "0.27"
hmac = "0.12"
md-5 = "0.10"
md4 = "0.10"
petgraph = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
