[package]
name = "getexec-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "getexec"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
getexec-app = { path = "../getexec-app" }
getexec-config = { path = "../getexec-config" }
getexec-core = { path = "../getexec-core" }
