[package]
name = "netraze-dcerpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Pure-Rust DCE/RPC v5 stack. Phase 1 of the cross-platform portage plan.
#
# - `pdu`      : DCE/RPC v5 fragment headers + bind / request / response / fault
# - `ndr`      : NDR20 Network Data Representation reader/writer
# - `auth`     : NTLMSSP sign+seal wrapper for PKT_PRIVACY
# - `transport`: `RpcTransport` async trait — SMB named-pipe + TCP 135 later
# - `interfaces::*`: one Rust module per RPC interface (SRVSVC, SAMR, LSARPC, …)
[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }

# Crypto stack reused for NTLMSSP MIC/seal (see `auth` module).
hmac = { workspace = true }
md-5 = { workspace = true }
md4 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
