[package]
name = "netraze-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
netraze-core = { path = "../netraze-core" }
# Pure-Rust DCE/RPC v5 stack — required by `smb::rpc::SmbPipeTransport`,
# the Phase 3 carrier that lets DCE/RPC PDUs ride over SMB2 named pipes.
netraze-dcerpc = { path = "../netraze-dcerpc" }
async-trait = { workspace = true }
tokio = { workspace = true }

# Pure-Rust crypto stack — replaces `windows::Win32::Security::Cryptography::BCrypt*`.
# See crates/netraze-protocols/src/smb/crypto.rs for the consumers.
aes = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
des = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
md4 = { workspace = true }
rand = { workspace = true }

# Windows-only: the native NetAPI / WNet / SCM / Registry backend used by
# connection.rs, shares.rs, users.rs, info.rs, exec.rs, dump.rs, browser.rs,
# enum_av.rs. Slated for removal in Phase 7 once the DCE/RPC-over-socket
# stack in `netraze-dcerpc` takes over.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_WNet",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Services",
] }
